--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,3 +1,4 @@
+
 {% block head %}
     <head>
         <meta charset="utf-8">
@@ -39,13 +40,13 @@
                                     <a class="nav-link" href="{{ path ('pirate')}}">A propos</a>
                                 </li>
                                 <li class="nav-item dropdown">
-                                    <a class="nav-link dropdown-toggle" href="{{ path ('pirate')}}" id="navbarDropdown_1"
+                                    <a class="nav-link dropdown-toggle" href="{{ path ('produits')}}" id="navbarDropdown_1"
                                     role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                     Produits
                                 </a>
                                 <div class="dropdown-menu" aria-labelledby="navbarDropdown_1">
                                     <a class="dropdown-item" href="{{ path ('produits')}}"> Liste produits</a>
-                                    <a class="dropdown-item" href="{{ path ('pirate')}}">Details des produits</a>
+                                    <a class="dropdown-item" href="{{ path ('produits')}}">Details des produits</a>
                                     
                                 </div>
                             </li>
@@ -99,8 +100,7 @@
 </div>
 </header>
 {% endblock %}
-
-{% block main %}    <!-- banner part start-->
+{% block main %}  
 
     {% for message in app.flashes('success') %}
         <div class="alert alert-success" role="alert">
@@ -385,8 +385,7 @@
                         </footer>
                     {% endblock %}
                     {% block javascript %}
-                        <script
-                        src = "{{ asset ('js/jquery-1.12.1.min.js') }}">
+                        <script src="{{asset('js/jquery-1.12.1.min.js')}}"><script>
                         <script src="{{ asset ('js/popper.min.js') }}"></script>
                         <script src="{{ asset ('js/bootstrap.min.js') }}"></script>
                         <script src="{{ asset ('js/jquery.magnific-popup.js') }}"></script>
