--- a/templates/produits/index.html.twig
+++ b/templates/produits/index.html.twig
@@ -1,73 +1,271 @@
-{% extends 'base.html.twig' %}
 
-{% block body %}
-    {% block message %}
-            {% for succes in app.flashes('succes') %}
-                <div class="danger alert alert-danger">
-                    {{ succes }}
-                </div>
-            {% endfor %}
-    {% endblock %}
-    <div class="bg-light p-3">
-        <h1>Les produits</h1>
-    </div>
-    <div class="row">
-        {% for produits in produit %}
-            <div class="col-4 mt-4">
-                <div class="border border-dark rounded p-2 clearfix">
-                    <h2>
-                        {{ produits.nom }}
-                        -
-                        {{ produits.prix }}
-                        €
-                    </h2>
-                    <img class="img-fluid rounded" src="{{ asset ('img/')}} {{ produits.image }}" alt="Image de {{ produits.nom }}">
-                    <hr>
-                    <a href="{{ path('panier_add', {'id': produits.id}) }}" class="btn btn-success float-right">
-                        <i class="fas fa-shopping-cart mr-1"></i>
-                        Ajouter
-                    </a>
-                    <a href="{{ path('produits_like', {'id': produits.id}) }}" class="btn btn-link js-like">
-                        {% if app.user and produits.isLikedByUser(app.user) %}
-                            <i class="fas fa-thumbs-up"></i>
-                        {% else %}
-                            <i class="far fa-thumbs-up"></i>
-                        {% endif %}
-                        <span class="js-likes">{{ produits.likes | length }}</span>
-                        <span class="js-label">J'aime</span>
-                    </a>
-                </div>
+
+{% block title %}
+  <title>
+    Welcome!
+  </title>
+{% endblock %}
+{% block stylesheets %}
+  <head>
+    <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <title>L'arômes des sens</title>
+        <link rel="icon" href="{{ asset ('img/tree.png') }}">
+        <link rel="stylesheet" href="{{ asset ('css/bootstrap.min.css') }}">
+        <link rel="stylesheet" href="{{ asset ('css/animate.css') }}">
+        <link rel="stylesheet" href="{{ asset ('css/owl.carousel.min.css') }}">
+        <link rel="stylesheet" href="{{ asset ('css/all.css') }}">
+        <link rel="stylesheet" href="{{ asset ('css/flaticon.css') }}">
+        <link rel="stylesheet" href="{{ asset ('css/themify-icons.css') }}">
+        <link rel="stylesheet" href="{{ asset ('css/magnific-popup.css') }}">
+        <link rel="stylesheet" href="{{ asset ('css/slick.css') }}">
+        <link rel="stylesheet" href="{{ asset ('css/style.css') }}">
+    <link rel="stylesheet"
+      href="https://bootswatch.com/4/litera/bootstrap.min.css" />
+    <link rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css"
+      integrity="sha256-+N4/V/SbAFiW1MPBCXnfnP9QSN3+Keu+NlB+0ev/YKQ="
+      crossorigin="anonymous" />
+    <link rel="stylesheet" href="{{ asset('css/style.css') }}" />
+  </head>
+{% endblock %}
+{% block header %}
+    <body>
+        <header class="main_menu home_menu">
+            <div class="container">
+                <div class="row align-items-center justify-content-center">
+                    <div class="col-lg-12">
+                        <nav class="navbar navbar-expand-lg navbar-light">
+                            <a class="navbar-brand" href="{{ path ('pirate')}}"> <img src="{{ asset ('img/logo.png')}}" alt="logo"> </a>
+                            <button class="navbar-toggler" type="button" data-toggle="collapse"
+                            data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                            aria-expanded="false" aria-label="Toggle navigation">
+                            <span class="menu_icon">
+                                <i class="fas fa-bars"></i>
+                            </span>
+                        </button>
+                        <div class="collapse navbar-collapse main-menu-item" id="navbarSupportedContent">
+                            <ul class="navbar-nav">
+                                <li class="nav-item">
+                                    <a class="nav-link" href="{{ path ('pirate')}}">Accueil</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="{{ path ('pirate')}}">A propos</a>
+                                </li>
+                                <li class="nav-item dropdown">
+                                    <a class="nav-link dropdown-toggle" href="{{ path ('produits')}}" id="navbarDropdown_1"
+                                    role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                    Produits
+                                </a>
+                                <div class="dropdown-menu" aria-labelledby="navbarDropdown_1">
+                                    <a class="dropdown-item" href="{{ path ('produits')}}"> Liste produits</a>
+                                    <a class="dropdown-item" href="{{ path ('produits')}}">Details des produits</a>
+                                    
+                                </div>
+                            </li>
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" href="{{ path ('pirate')}}" id="navbarDropdown_3"
+                                role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                Pages
+                            </a>
+                            <div class="dropdown-menu" aria-labelledby="navbarDropdown_2">
+                                <a class="dropdown-item" href="{{ path ('pirate')}}"> 
+                                    Se connecter        
+                                </a>
+                                <a class="dropdown-item" href="{{ path ('pirate')}}">Renvoyer un produit</a>
+                                <a class="dropdown-item" href="{{ path ('panier_index')}}">Mon panier</a>
+                                <a class="dropdown-item" href="{{ path ('pirate')}}">Confirmation</a>
+                            </div>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="{{ path ('pirate')}}" id="navbarDropdown_2"
+                            role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            blog
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdown_2">
+                            <a class="dropdown-item" href="{{ path ('pirate')}}"> blog</a>
+                            <a class="dropdown-item" href="{{ path ('pirate')}}">Single blog</a>
+                        </div>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ path ('pirate')}}">Contact</a>
+                    </li>
+                </ul>
             </div>
-        {% endfor %}
+            <div class="hearer_icon d-flex align-items-center">
+                <a id="search_1" href="{{ asset ('javascript:void(0)')}}"><i class="ti-search"></i></a>
+                <a href="cart.html">
+                    <i class="flaticon-shopping-cart-black-shape"></i>
+                </a>
+            </div>
+        </nav>
     </div>
+</div>
+</div>
+<div class="search_input" id="search_input_box">
+    <div class="container ">
+        <form class="d-flex justify-content-between search-inner">
+            <input type="text" class="form-control" id="search_input" placeholder="Search Here">
+            <button type="submit" class="btn"></button>
+            <span class="ti-close" id="close_search" title="Close Search"></span>
+        </form>
+    </div>
+</div>
+</header>
 {% endblock %}
-{% block javascripts %}
-    <script src="{{ asset('https://unpkg.com/axios/dist/axios.min.js')}}"></script>
-    <script>
-        function onClickBtnLike(event){
-            event.preventDefault();
-            const url = this.href;
-            const spanCount = this.querySelector('span.js-likes');
-            const icone = this.querySelector('i');
-            axios.get(url).then(function(response){
-                spanCount.textContent = response.data.likes;
-                if(icone.classList.contains('fas')){
-                     icone.classList.replace('fas', 'far');
-                }
-                else{
-                    icone.classList.replace('far', 'fas');
-                }
-            }).catch(function(error){
-                if(error.response.status === 403){
-                    window.alert("Vous ne pouvez pas liker un article si vous n ete pas connecté")
-                }
-                else {
-                    window.alert("une erreur c est produite veuillez essayer plus tard")
-                }
-            })
-        }
-        document.querySelectorAll('a.js-like').forEach(function(link){
-            link.addEventListener('click', onClickBtnLike);
-        })
-    </script>
+{% block body %}
+  <div>
+    <h1>
+      Votre panier
+    </h1>
+  </div>
+  {% if (items|length) > 0 %}  
+    <table class="table">
+      <thead>
+        <tr>
+          <th>
+            Produit
+          </th>
+          <th>
+            Image
+          </th>
+          <th>
+            Déscription
+          </th>
+          <th>
+            Prix
+          </th>
+          <th>
+            Quantité
+          </th>
+          <th>
+            Total
+          </th>
+          <th></th>
+        </tr>
+      </thead>
+      <tbody>
+        {% for item in items %}
+          <tr>
+            <td>
+              {{ item.produits.nom }}
+            </td>
+            <td>
+              <img class="imgpanier"
+                src="{{ asset('img/') }}{{ item.produits.image }}"/>
+            </td>
+            <td>
+              {{ item.produits.description }}
+            </td>
+            <td>
+              {{ item.produits.prix }}
+            </td>
+            <td>
+              {{ item.quantity }}
+            </td>
+            <td>
+              {{ item.produits.prix * item.quantity }}
+            </td>
+            <td>
+              <a href="{{
+                path(
+                  'panier_subtract',
+                  {
+                    id: item.produits.id
+                  }
+                )
+                }}"
+                class="btn">
+                <img src="{{ asset('img/moins.png') }}" />
+              </a>
+
+              <a href="{{
+                path(
+                  'panier_add',
+                  {
+                    id: item.produits.id
+                  }
+                )
+                }}"
+                class="btn">
+                <img src="{{ asset('img/plus.png') }}" />
+              </a>
+            </td>
+            <td>
+              <a href="{{
+                path(
+                  'panier_remove',
+                  {
+                    id: item.produits.id
+                  }
+                )
+                }}"
+                class="btn btn-danger btn-sm">
+                <i class="fas fa-trash"></i>
+              </a>
+            </td>
+          </tr>
+        {% endfor %}
+      </tbody>
+      <tfoot>
+        <tr>
+          <td colspan="5">
+            Total :
+          </td>
+          <td>
+            {{ totalPrice }}
+          </td>
+          <td></td>
+        </tr>
+      </tfoot>
+    </table>
+  {% else %}
+    <p>
+      Votre panier est vide
+    </p>
+  {% endif %}
 {% endblock %}
+                    {% block footer %}
+                        <footer class="footer_part">
+                            <div class="footer_iner">
+                                <div class="container">
+                                    <div class="row justify-content-between align-items-center">
+                                        <div class="col-lg-8">                   
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="copyright_part">
+                                <div class="container">
+                                    <div class="row ">
+                                        <div class="col-lg-12">
+                                            <div class="copyright_text">                    
+                                                Copyright &copy;<script>document.write(new Date().getFullYear());</script> Tous droits réservés | Site par Adame, Dounia, Bryan et Guillaume <i class="ti-heart" aria-hidden="true"></i></a>
+                                                <div class="copyright_link">
+                                                    <a href="#">Conditions d'utilisations</a>
+                                                    <a href="#">FAQ</a>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </footer>
+                    {% endblock %}
+                    {% block javascript %}
+                        <script src="{{asset('js/jquery-1.12.1.min.js')}}"><script>
+                        <script src="{{ asset ('js/popper.min.js') }}"></script>
+                        <script src="{{ asset ('js/bootstrap.min.js') }}"></script>
+                        <script src="{{ asset ('js/jquery.magnific-popup.js') }}"></script>
+                        <script src="{{ asset ('js/owl.carousel.min.js') }}"></script>
+                        <script src="{{ asset ('js/jquery.nice-select.min.js') }}"></script>
+                        <script src="{{ asset ('js/slick.min.js') }}"></script>
+                        <script src="{{ asset ('js/jquery.counterup.min.js') }}"></script>
+                        <script src="{{ asset ('js/waypoints.min.js') }}"></script>
+                        <script src="{{ asset ('js/contact.js') }}"></script>
+                        <script src="{{ asset ('js/jquery.ajaxchimp.min.js') }}"></script>
+                        <script src="{{ asset ('js/jquery.form.js') }}"></script>
+                        <script src="{{ asset ('js/jquery.validate.min.js') }}"></script>
+                        <script src="{{ asset ('js/mail-script.js') }}"></script>
+                        <script src="{{ asset ('js/custom.js') }}"></script>
+                        {% endblock %}
