--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -9,7 +9,10 @@
 		<link href="{{ asset ('https://fonts.googleapis.com/css?family=Josefin+Sans:300,400,400i|Nunito:300,300i')}}" rel="stylesheet">
 		<link rel="stylesheet" href="{{ asset ('css/style.css')}}">
 		<link rel="shortcut icon" type="image/png" href="{{ asset ('img/favicon.png')}}">
-
+        {% block bootstrap %}
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+		
+		{% endblock %}
 		<title>Les sens des arômes &mdash;</title>
 	</head>
 
@@ -33,7 +36,9 @@
 			</header>
 		{% endblock %}
 		{% block main %}
+		
 			<div class="realtors">
+			
 				<h3 class="heading-3">Top 3 Realtors</h3>
 				<div class="realtors__list">
 					<img src="{{ asset ('img/realtor-1.jpeg')}}" alt="Realtor 1" class="realtors__img">
@@ -55,6 +60,22 @@
 					</div>
 				</div>
 			</div>
+			<div class="container">
+  
+  
+  <div class="row">
+    <div class="col-sm-0 col-md-2 col-lg-3"></div>
+    <div class="col-sm-12 col-md-8 col-lg-6">
+      <h1 style="text-align: center">Mon site à moi</h1>
+      ﻿<div class="form-group">
+        <input class="form-control" type="text" id="search-user" value="" placeholder="Rechercher un ou plusieurs utilisateurs"/>
+      </div>
+      ﻿<div style="margin-top: 20px">
+        <div id="result-search"></div> <!-- C'est ici que nous aurons nos résultats de notre recherche -->
+      </div>
+    </div>
+  </div>
+</div>
 
 			<section class="features">
 				<div class="feature">
@@ -374,5 +395,37 @@
 				</p>
 			</footer>
 		{% endblock %}
+
+		{% block javascripts %}
+		<script> 
+		$(document).ready(function(){
+			$('#search-user').keyup (function(){
+				$('#result-seach').html('');
+				var utilisateur = $(this).val();
+				if(utilisateur !=""){
+					$.ajax({
+						type:'GET',
+						url:'functions/recherche-utilisateur.php',
+						data:'user='+ entencodeURIComponent(utilisateur),
+						success:function(data){
+							if(data!= ""){
+								$('#result-search').append(data);
+								console.log('ok')
+							}else
+						}
+						document.getElementById('result-search').innerHTML="<div style='font-size: 20px; text-align: center; margin-top: 10px'>Aucun tilisateur</div>
+					}
+				}
+			});
+		}
+		});
+		});
+		</script>
+		<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+		{% endblock %}
+
+	
 	</body>
 </html>
