--- a/templates/produits/index.html.twig
+++ b/templates/produits/index.html.twig
@@ -1,5 +1,5 @@
 
-{% extends "base.html.twig" %}
+
 {% block title %}
   <title>
     Welcome!
@@ -119,7 +119,7 @@
       Votre panier
     </h1>
   </div>
-  {% if (items|length) > 0 %}  
+  {#{% if (items|length) > 0 %}#}  
     <table class="table">
       <thead>
         <tr>
@@ -145,7 +145,7 @@
         </tr>
       </thead>
       <tbody>
-        {% for item in items %}
+       {# {% for item in items %}#}
           <tr>
             <td>
               {{ item.produits.nom }}
@@ -219,13 +219,13 @@
         </tr>
       </tfoot>
     </table>
-  {% else %}
+ {#} {% else %}#}
     <p>
       Votre panier est vide
     </p>
-  {% endif %}
+ {#} {% endif %}#}
 {% endblock %}
-                    {% block footer %}
+        {% block footer %}
                         <footer class="footer_part">
                             <div class="footer_iner">
                                 <div class="container">
