--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -81,7 +81,7 @@
             </div>
             <div class="hearer_icon d-flex align-items-center">
                 <a id="search_1" href="{{ asset ('javascript:void(0)')}}"><i class="ti-search"></i></a>
-                <a href="cart.html">
+                <a href="{{ path ('panier_index')}}">
                     <i class="flaticon-shopping-cart-black-shape"></i>
                 </a>
             </div>
@@ -101,34 +101,32 @@
 </header>
 {% endblock %}
 {% block main %}  
-
-    {% for message in app.flashes('success') %}
-        <div class="alert alert-success" role="alert">
-            {{ message }}
-        </div>
-    {% endfor %}
-
-    {% for message in app.flashes('error') %}
-        <div class="alert alert-warning" role="alert">
-            {{ message }}
-        </div>
-    {% endfor %}
-
-    <section class="banner_part">
-        <div class="container">
+{% for message in app.flashes('success') %}
+    <div class="alert alert-success" role="alert">
+{{ message }}
+    </div>
+{% endfor %}
+{% for message in app.flashes('error') %}
+    <div class="alert alert-warning" role="alert">
+      {{ message }}
+    </div>
+        {% endfor %}
+<section class="banner_part">
+       <div class="container">
             <div class="row align-items-center">
                 <div class="col-md-5">
                     <div class="banner_text">
                         <div class="banner_text_iner">
                             <h1>Les saveurs de l'orient</h1>
                             <p>Elegantes et puissantes, à savourer en calumet</p>
-                            <a href="{{ asset ('produits') }}" class="btn_1">découvrir nos produits</a>
+                            <a href="{{ path ('produits') }}" class="btn_1">découvrir nos produits</a>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="banner_img"><img src="{{ asset ('img/gal-1.jpeg') }}" alt="#" class="img-fluid">
+        <div class="banner_img"
+        ><img src="{{ asset ('img/gal-1.jpeg') }}" alt="#" class="img-fluid">
         </div>
     </section>
     <section class="single_product_list">
@@ -314,7 +312,7 @@
                                     <div class="col-lg-3 col-sm-6">
                                         <div class="single_feature_part">
                                             <img src="{{ asset ('img/icon/feature_icon_1.svg') }}" alt="#">
-                                            <h4>Support carte de crédit</h4>
+                                            <h4>Support carte</h4>
                                         </div>
                                     </div>
                                     <div class="col-lg-3 col-sm-6">
@@ -359,14 +357,7 @@
                     {% endblock %}
                     {% block footer %}
                         <footer class="footer_part">
-                            <div class="footer_iner">
-                                <div class="container">
-                                    <div class="row justify-content-between align-items-center">
-                                        <div class="col-lg-8">                   
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
+                            
                             <div class="copyright_part">
                                 <div class="container">
                                     <div class="row ">
@@ -374,6 +365,7 @@
                                             <div class="copyright_text">                    
                                                 Copyright &copy;<script>document.write(new Date().getFullYear());</script> Tous droits réservés | Site par Adame, Dounia, Bryan et Guillaume <i class="ti-heart" aria-hidden="true"></i></a>
                                                 <div class="copyright_link">
+                                               {# <iframe src="https://www.google.com/maps/d/embed?mid=1_CEo7EOWczuCUG27YS8OBerIaP-uBPXC" width="640" height="480"></iframe> #}
                                                     <a href="#">Conditions d'utilisations</a>
                                                     <a href="#">FAQ</a>
                                                 </div>
@@ -383,21 +375,21 @@
                                 </div>
                             </div>
                         </footer>
-                    {% endblock %}
-                    {% block javascript %}
-                        <script src="{{asset('js/jquery-1.12.1.min.js')}}"><script>
-                        <script src="{{ asset ('js/popper.min.js') }}"></script>
-                        <script src="{{ asset ('js/bootstrap.min.js') }}"></script>
-                        <script src="{{ asset ('js/jquery.magnific-popup.js') }}"></script>
-                        <script src="{{ asset ('js/owl.carousel.min.js') }}"></script>
-                        <script src="{{ asset ('js/jquery.nice-select.min.js') }}"></script>
-                        <script src="{{ asset ('js/slick.min.js') }}"></script>
-                        <script src="{{ asset ('js/jquery.counterup.min.js') }}"></script>
-                        <script src="{{ asset ('js/waypoints.min.js') }}"></script>
-                        <script src="{{ asset ('js/contact.js') }}"></script>
-                        <script src="{{ asset ('js/jquery.ajaxchimp.min.js') }}"></script>
-                        <script src="{{ asset ('js/jquery.form.js') }}"></script>
-                        <script src="{{ asset ('js/jquery.validate.min.js') }}"></script>
-                        <script src="{{ asset ('js/mail-script.js') }}"></script>
-                        <script src="{{ asset ('js/custom.js') }}"></script>
-                        {% endblock %}
+{% endblock %}
+{% block javascript %}
+<script src="{{asset('js/jquery-1.12.1.min.js')}}"><script>
+<script src="{{ asset ('js/popper.min.js') }}"></script>
+<script src="{{ asset ('js/bootstrap.min.js') }}"></script>
+<script src="{{ asset ('js/jquery.magnific-popup.js') }}"></script>
+<script src="{{ asset ('js/owl.carousel.min.js') }}"></script>
+<script src="{{ asset ('js/jquery.nice-select.min.js') }}"></script>
+<script src="{{ asset ('js/slick.min.js') }}"></script>
+<script src="{{ asset ('js/jquery.counterup.min.js') }}"></script>
+<script src="{{ asset ('js/waypoints.min.js') }}"></script>
+<script src="{{ asset ('js/contact.js') }}"></script>
+<script src="{{ asset ('js/jquery.ajaxchimp.min.js') }}"></script>
+<script src="{{ asset ('js/jquery.form.js') }}"></script>
+<script src="{{ asset ('js/jquery.validate.min.js') }}"></script>
+<script src="{{ asset ('js/mail-script.js') }}"></script>
+<script src="{{ asset ('js/custom.js') }}"></script>
+{% endblock %}
