--- a/templates/produits/index.html.twig
+++ b/templates/produits/index.html.twig
@@ -1,7 +1,5 @@
-{% block stylesheet %}
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-{% endblock %}
-{% block body %}
+{% extends "base.html.twig" %}
+{% block main %}
 
 
     <div class="card m-3">
@@ -35,3 +33,4 @@
         </div>
     
 {% endblock %}
+
