--- a/public/css/style.css
+++ b/public/css/style.css
@@ -231,7 +231,7 @@ h3,
 h4,
 h5,
 h6 {
-    color: #4b3049;
+    color: #52be80;
     font-family: 'Poppins', sans-serif;
     -webkit-transition: 0.5s;
     transition: 0.5s;
@@ -256,7 +256,7 @@ p {
 h2 {
     font-size: 44px;
     line-height: 28px;
-    color: #4b3049;
+    color: #52be80;
     font-weight: 600;
     line-height: 1.222;
 }
@@ -347,7 +347,7 @@ button:focus,
 
 .section_tittle h2 {
     font-size: 36px;
-    color: #4b3049;
+    color: #52be80;
     line-height: 27px;
     font-weight: 700;
     position: relative;
@@ -2710,7 +2710,7 @@ ul {
 /* line 12, /Applications/MAMP/htdocs/old/palash/cl/shop_html/sass/_menu.scss */
 
 .main_menu .main-menu-item ul li .nav-link {
-    color: #4b3049;
+    color: #52be80;
     font-size: 16px;
     padding: 0;
     font-family: 'Rubik', sans-serif;
@@ -2838,7 +2838,7 @@ ul {
 /* line 89, /Applications/MAMP/htdocs/old/palash/cl/shop_html/sass/_menu.scss */
 
 .main_menu a i {
-    color: #4b3049 !important;
+    color: #52be80 !important;
     position: relative;
     z-index: 1;
     font-size: 20px;
@@ -3073,7 +3073,7 @@ ul {
     content: '';
     left: 0;
     bottom: 0;
-    background-color: #b08ead;
+    background-color: #52be80;
     width: 196px;
     height: 618px;
 }
@@ -3367,7 +3367,7 @@ ul {
 /* line 36, /Applications/MAMP/htdocs/old/palash/cl/shop_html/sass/_single_product.scss */
 
 .single_product_list .single_product_content h2 a {
-    color: #4b3049;
+    color: #52be80;
 }
 
 
@@ -3753,7 +3753,7 @@ input:focus {
 /* line 37, /Applications/MAMP/htdocs/old/palash/cl/shop_html/sass/_trending_items.scss */
 
 .single_product_item h3 a {
-    color: #4b3049;
+    color: #52be80;
 }
 
 
@@ -3790,7 +3790,7 @@ input:focus {
 .client_review {
     padding: 100px 0;
     text-align: center;
-    background-color: #b08ead;
+    background-color: #238e93e6;
     position: relative;
 }
 
@@ -4003,7 +4003,7 @@ input:focus {
 /* line 1, /Applications/MAMP/htdocs/old/palash/cl/shop_html/sass/_subscribe_part.scss */
 
 .subscribe_part {
-    background-color: #4b3049;
+    background-color: #52be80;
 }
 
 
@@ -7228,9 +7228,9 @@ input:focus {
 /* line 1960, /Applications/MAMP/htdocs/old/palash/cl/shop_html/sass/_product.scss */
 
 .login_part .login_part_text {
-    background-image: -moz-linear-gradient( 90deg, #b08ead 0%, #4b3049 64%, #b08ead 100%);
-    background-image: -webkit-linear-gradient( 90deg, #b08ead 0%, #4b3049 64%, #b08ead 100%);
-    background-image: linear-gradient( 90deg, #b08ead 0%, #4b3049 64%, #b08ead 100%);
+    background-image: -moz-linear-gradient( 90deg, #b08ead 0%, #52be80 64%, #b08ead 100%);
+    background-image: -webkit-linear-gradient( 90deg, #b08ead 0%, #52be80 64%, #b08ead 100%);
+    background-image: linear-gradient( 90deg, #b08ead 0%, #52be80 64%, #b08ead 100%);
     background-size: 200% auto;
 }
 
@@ -10417,7 +10417,7 @@ h6 {
 .about_us .about_us_content h3 {
     font-size: 24px;
     line-height: 1.5;
-    color: #4b3049;
+    color: #52be80;
     margin: 5px 0 60px;
     font-weight: 400;
 }
@@ -10584,7 +10584,7 @@ h6 {
 
 .footer_part .footer_iner .footer_menu_item a {
     display: inline-block;
-    color: #4b3049;
+    color: #52be80;
     font-size: 16px;
     padding: 0 17px;
 }
@@ -10632,7 +10632,7 @@ h6 {
     height: 45px;
     width: 45px;
     border-radius: 50%;
-    background-color: #4b3049;
+    background-color: #52be80;
     line-height: 45px;
     color: rgb(255, 255, 255);
     display: inline-block;
@@ -10650,7 +10650,7 @@ h6 {
 /* line 69, /Applications/MAMP/htdocs/old/palash/cl/shop_html/sass/_footer.scss */
 
 .footer_part .copyright_part {
-    background-color: #f4edf2;
+    background-color: #52be80;
     padding: 30px 0px;
 }
 
@@ -10661,6 +10661,7 @@ h6 {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    color: white;
 }
 
 @media (max-width: 991px) {
@@ -10674,7 +10675,7 @@ h6 {
 /* line 80, /Applications/MAMP/htdocs/old/palash/cl/shop_html/sass/_footer.scss */
 
 .footer_part .copyright_part .copyright_text p a {
-    color: #4b3049;
+    color: #52be80;
 }
 
 @media (max-width: 991px) {
@@ -10688,7 +10689,7 @@ h6 {
 /* line 89, /Applications/MAMP/htdocs/old/palash/cl/shop_html/sass/_footer.scss */
 
 .footer_part .copyright_part .copyright_link a {
-    color: #4b3049;
+    color: white;
     margin-left: 40px;
 }
 
